# target

./: Cargo.toml
.github/workflows/: build.yaml
src/: bin.rs  lib.rs  main.rs
tests/: binary.rs
