[package]
name        = "target"
version     = "1.0.0"
description = "Get information on compilation target"
authors     = ["Casey Rodarmor <casey@rodarmor.com>"]
license     = "CC0-1.0"
homepage    = "https://github.com/casey/target"

[[bin]]
name = "dump_target"
path = "src/bin.rs"

[dependencies]
