[package]
name        = "target"
version     = "2.0.1"
description = "Get information on compilation target"
authors     = ["Casey Rodarmor <casey@rodarmor.com>"]
license     = "CC0-1.0"
homepage    = "https://github.com/casey/target"

[dev-dependencies]
executable-path = "1.0.0"
pretty_assertions = "0.7.2"
